--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>จดหมายสีชมพู</title>
+    <title>จดหมาย</title>
     <style>
         body {
             background-color: #ffe6f2;
@@ -82,7 +82,7 @@
         <div class="flap"></div>
         <div class="letter">
             <h2>💌 จดหมายพิเศษ 💌</h2>
-            <p>สุขสันต์วาเลนไทน์ครับไอ่อ้วนน รักแฟนที่สุดงับ</p>
+            <p>สุขสันต์วาเลนไทน์ครับ,_,</p>
         </div>
     </div>
 
